--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".ThemVTActivity"></activity>
+        <activity android:name=".PhieuVanChuyenActivity"></activity>
+        <activity android:name=".ThemCTActivity" />
+        <activity android:name=".ThemVTActivity" />
         <activity android:name=".DanhsachVT" />
         <activity android:name=".DSVatTuActivity" />
         <activity android:name=".VanChuyenActivity" />
