--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".ThemCTVCActivity"></activity>
+        <activity android:name=".SuaCongTrinhActivity"></activity>
+        <activity android:name=".ThemCTVCActivity" />
         <activity android:name=".ThongKeActivity" />
         <activity android:name=".ChiTietPVCActivity" />
         <activity android:name=".PhieuVanChuyenActivity" />
